Modifica index - paneles

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,7 +10,7 @@
 </nav>
 <div class="container">
 	<div class="row">
-	<p><a class="btn btn-primary btn-sm" href="#" role="button">Volver</a></p>
+	<p><a class="btn btn-primary btn-sm" href="/" role="button">Volver</a></p>
 	</div>
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3">
