--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,8 +3,14 @@
  	<img class="logo" src="<%= image_url "monkodevlogo.png" %>">
  	<img class="logoblog" src="<%= image_url "logosuperblog.png" %>">
     	<ul class="nav navbar-nav navbar-right">
-    		<li><a href="#">Ingresar</a></li>
-    		<li><a href="#">Registrarse</a></li>    		
+    	<% if user_signed_in? %>
+    			<li><%= link_to "Nuevo Post", new_post_path %></li> 
+    			<li><%= link_to "Salir", destroy_user_session_path, method: :delete  %></li> 
+    		<% else %>
+       			<li><%= link_to "Ingresar", new_user_session_path %></li> 
+    			<li><%= link_to "Registrarse", new_user_registration_path %></li>  
+    		<% end %>	
+    				
     	</ul>
   </div>
 </nav>
@@ -14,7 +20,7 @@
 		<div class="col-sm-8 col-sm-offset-2">
 			<div class="estiloindex">
 			  <h3><%= p.titulo %> </h3>
-			  <h4><small>Subtext for header</small></h4>
+			  <h4><small>Publicado por <%= p.user.email %> hace alrededor de <%= (Time.now - p.created_at).to_i %></small></h4>
 			  <p><%= p.texto %></p>
 			 </div>
 			 		
