--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,16 @@
-<h2>Sign up</h2>
+<div class="container negro">
+<div class="row headerlogo">
+    <div class="col-md-4 col-md-offset-4">
+      <img class="logo derecha" src="<%= image_url "monkodevlogo.png" %>">
+      <img class="logoblog" src="<%= image_url "logosuperblog.png" %>">
+    </div>
+</div>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="panel panel-default">
+      <div class="panel-body centrado">
+
+<h2>Registrarse</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -18,12 +30,17 @@
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off" %><br />
   </div>
-
+<br />
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Registrar!" %><br />
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
+
+</div>
+</div>
+</div>
+</div>
+</div>
