Implementa markdown + restricciones usuarios

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-html,body{height:100%;}
+html,body{height:100%; margin-bottom:60px;}
 nav {  
     color: #fff; 
     height: 75px;
